--- a/02_case/index.html
+++ b/02_case/index.html
@@ -6,7 +6,10 @@
     <link rel="stylesheet" href="assest/fontawaysam/css/all.min.css">
 </head>
 <style>
+    body{
+        overflow-x: hidden;
 
+    }
     header{
         background-color: pink;
         height: 100px;
@@ -42,38 +45,48 @@
     }
     .p{
         position: absolute;
-        left: 300px;
-        top: 350px;
+        left: 290px;
+        top: 305px;
         font-style: revert;
         font-weight: bold;
+        margin: 0;
+    }
+    section>div{
+        display: inline-block;
+        margin: 0;
     }
     .gif1{
         position: absolute;
-        left: 270px;
-        margin: 20px;
+        left: 280px;
+        margin:0;
         border: 5px solid;
+
     }
     .gif2{
         position: absolute;
-        left: 575px;
-        margin: 20px;
+        left: 635px;
+        margin: 0;
         border: 5px solid;
     }
     .gif3{
         position: absolute;
-        left: 880px;
-        margin: 20px;
+        left: 990px;
+        margin: 0;
         border: 5px solid;
+    }
+    footer{
+        position: relative;
     }
     .last{
         background-color: grey;
         width: 100vw;
         height: 40px;
-        position: absolute;
-        top: 120vh;
+        position: relative;
+        top:100vh;
+        bottom: 0;
     }
     .last>center>h3{
-        position: absolute;
+        position: relative;
         left: 0;right: 0;
         font-style: italic;
         color: white;
@@ -113,24 +126,30 @@
 </div>
 </aside>
 
-<div class="gif1">
-    <img src=".\assest\love.gif"
-         title="gif"
-         width="300"
-         height="200">
-</div>
-<div class="gif2">
-    <img src=".\assest\love.gif"
-         title="gif"
-         width="300"
-         height="200">
-</div>
-<div class="gif3">
-    <img src=".\assest\love.gif"
-         title="gif"
-         width="300"
-         height="200">
-</div>
+<section>
+    <div>
+        <div class="gif1">
+            <img src=".\assest\monkey.gif"
+                 title="gif"
+                 width="350"
+                 height="200">
+        </div>
+        <div class="gif2">
+            <img src=".\assest\monkey.gif"
+                 title="gif"
+                 width="350"
+                 height="200">
+        </div>
+        <div class="gif3">
+            <img src=".\assest\monkey.gif"
+                 title="gif"
+                 width="335"
+                 height="200">
+        </div>
+    </div>
+</section>
+
+
 
 <div class="p">
     <P>
@@ -174,15 +193,24 @@
         doloribus, dolorum expedita incidunt labore laborum magni maxime nisi nulla pariatur similique totam ullam
         voluptatum? Assumenda.
     </P>
+    <P>
+        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Accusantium animi atque consequuntur culpa delectus
+        doloribus, dolorum expedita incidunt labore laborum magni maxime nisi nulla pariatur similique totam ullam
+        voluptatum? Assumenda.
+    </P>
 
 </div>
-
+<footer>
     <div class="last">
         <center>
             <h3>Designed by kalana</h3>
         </center>
 
     </div>
+
+</footer>
+
+
 
 </body>
 </html>
